--- a/src/com/atden04/uclan_events_app/res/mainScene.fxml
+++ b/src/com/atden04/uclan_events_app/res/mainScene.fxml
@@ -32,11 +32,8 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
 <VBox prefHeight="812.0" prefWidth="375.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.atden04.uclan_events_app.user_interface.Controller">
   <children>
@@ -79,11 +76,9 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <children>
-            <VBox fx:id="eventWindow" prefHeight="787.0" prefWidth="460.0">
-            </VBox>
-      </children>
-    </AnchorPane>
+      <ScrollPane hbarPolicy="NEVER" prefHeight="793.0" prefWidth="375.0" vbarPolicy="ALWAYS">
+         <content>
+            <VBox fx:id="eventWindow" prefHeight="785.0" prefWidth="353.0" />
+         </content></ScrollPane>
   </children>
 </VBox>
