User can now log in. Need to update menu bar.

--- a/src/com/atden04/uclan_events_app/res/mainScene.fxml
+++ b/src/com/atden04/uclan_events_app/res/mainScene.fxml
@@ -39,20 +39,11 @@
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
-        <Menu mnemonicParsing="false" text="File">
+        <Menu mnemonicParsing="false" text="Account">
           <items>
-            <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem mnemonicParsing="false" text="Open…" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
-            <MenuItem mnemonicParsing="false" text="Revert" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
+            <MenuItem fx:id="loginMenu" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
+            <MenuItem fx:id="myReservationMenu" mnemonicParsing="false" text="My Reservations" />
+            <MenuItem fx:id="SignOutMenu" mnemonicParsing="false" text="Sign Out" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Edit">
